--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "expo": "^34.0.1",
+    "http": "0.0.0",
     "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -24,7 +26,8 @@
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.5",
     "react-navigation-stack": "^1.7.3",
-    "react-navigation-tabs": "^2.5.2"
+    "react-navigation-tabs": "^2.5.2",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@types/react": "^16.8.23",
