--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/datetimepicker": "^2.1.0",
     "crypto": "^1.0.1",
     "expo": "^34.0.1",
+    "expo-font": "^6.0.1",
     "http": "0.0.0",
     "native-base": "^2.13.8",
     "react": "16.8.3",
